--- a/前端开发_彭䶮_求职简历.html
+++ b/前端开发_彭䶮_求职简历.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=10;IE=9;IE=8;IE=7;IE=EDGE">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <meta charset="utf-8">
-    <title>前端开发_彭龑_求职简历</title>
+    <title>前端开发_彭䶮_求职简历</title>
 </head>
 <body>
 <div id="body">
@@ -1893,7 +1893,10 @@
                         <i class="mr_left_bg"></i>
                         <i class="mr_right_bg"></i>
                         <div class="mr_p_name mr_w604 clearfixs">
-                            <span class="mr_name">彭龑</span>
+                            <span class="mr_name">péng yǎn</span>
+                        </div>
+                        <div class="mr_p_name mr_w604 clearfixs">
+                            <span class="mr_name">彭䶮</span>
                         </div>
                         <div class="mr_p_introduce mr_w604 clearfixs">
                             <span class="mr_intro">积极主动，阳光正面</span>
@@ -1936,7 +1939,7 @@
                                                 </li>
                                                 <li class="mr_jobtype_li"><i></i><span class="mr_job_type">全职</span>
                                                 </li>
-                                                <li class="mr_city_li"><i></i><span class="mr_job_adr">杭州</span>
+                                                <li class="mr_city_li"><i></i><span class="mr_job_adr">深圳</span>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1962,7 +1965,7 @@
                                     <p>前端技能：</p>
                                     <ol>
                                         <li><p>熟练运用scss,sass等样式预处理器编写样式组件，对响应式布局，主流浏览器兼容十分了解</p></li>
-                                        <li><p>熟悉jq、zepto、underscore等工具库，并切熟练运用原生js进行开发</p></li>
+                                        <li><p>熟悉jq、zepto、underscore等工具库，并且熟练运用原生js进行开发</p></li>
                                         <li><p>十分熟悉主流框架(react、vue、avalon)，mvc框架(backbone等)</p></li>
                                         <li><p>熟悉requireJs、seaJs库,熟练进行模块化开发</p></li>
                                         <li><p>熟悉gulp、webpack等自动化构建工具</p></li>
@@ -2301,7 +2304,7 @@
 
                     <div class="mr_self_state">
                         <div class="form_wrap mr_self_s resume_status">
-                            ·&nbsp;目前是在职状态&nbsp;·
+                            ·&nbsp;目前离职状态&nbsp;·
                         </div>
                     </div>
                 </div>
