个人简历补充

--- a/前端开发_彭䶮_求职简历.html
+++ b/前端开发_彭䶮_求职简历.html
@@ -1886,7 +1886,7 @@
                     <div class="m_portrait mr_top_bg">
                         <img src="http://www.lagou.com//images/myresume/tou.png" class="opa" alt=""/>
                         <img style="border-radius: 50%;"
-                             src="//static.lagou.com/image1/M00/24/99/CgYXBlVM4ciARmrXAAAhPfOu5sQ464.jpg" width="120"
+                             src="//img.lagou.com/i/image/M00/6A/2D/CgpEMlmmwfKAVXaqAAC8L2a8P2I23.jpeg" width="120"
                              height="120" alt=""/>
                     </div>
                     <div class="mr_baseinfo">
@@ -1939,7 +1939,7 @@
                                                 </li>
                                                 <li class="mr_jobtype_li"><i></i><span class="mr_job_type">全职</span>
                                                 </li>
-                                                <li class="mr_city_li"><i></i><span class="mr_job_adr">深圳</span>
+                                                <li class="mr_city_li"><i></i><span class="mr_job_adr">杭州</span>
                                                 </li>
                                             </ul>
                                         </div>
@@ -2165,7 +2165,7 @@
                                         <p>各系统react项目的搭建与自动化构建的搭建</p>
                                     </li>
                                     <li>
-                                        <p>前端国家化技术方案调研与实践</p>
+                                        <p>前端国际化技术方案调研与实践</p>
                                     </li>
                                     <li>
                                         <p>公共基础组件的编写</p>
