更新个人简历

--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@
                                     <ol>
                                         <li><p>熟悉css2、css3、h5，熟练运用scss；能够高保真还原设计稿、对终端适配、浏览器兼容有较多经验</p></li>
                                         <li><p>熟悉原生js、es6、es7; 能够脱离第三方库开发</p></li>
-                                        <li><p>熟练运用vue、react等主流js库；较深入理解vue实现原理</p></li>
+                                        <li><p>熟练运用vue、react等主流js库；深入理解vue、vue-router、vux、redux实现原理</p></li>
                                         <li><p>熟悉模块化开发；熟练运用webpack、gulp构建工具，对打包构建有优化经验</p></li>
                                         <li><p>熟悉http、https；了解前端安全攻防</p></li>
                                         <li><p>对移动端web优化有较深理解，以及webApp、微信小程序开发实践经验</p></li>
@@ -2183,7 +2183,7 @@
                             </div>
                             <div class="mr_moudle_content olpf">
                                 <p>项目名： 我在家-H5商城、PC商城、H5活动页</p>
-                                <p>参与项目时间： 2018/10 -- 至今</p>
+                                <p>参与项目时间： 2017/10 -- 至今</p>
                                 <p>项目简介： 家居分享直购平台，主要提供家具购买、分享、新用户参观老用户家具服务</p>
                                 <p>在线链接： <a href="https://m.wzj.com" target="_blank">https://m.wzj.com</a>（手机模式预览）</p>
                                 <p>主要技术： vue、node、koa、webpack、scss、nginx</p>
